client/components/Projects.scss
@import '../styles/animations.scss';

.projects {
  margin: 0 auto;
}

/* */

.index {
  animation: contentDownIn 1s forwards;
  padding: 2em 0;
  text-align: center;
}

.indexHidden {
  @extend .index;
  animation: contentDownOut 1s forwards;
}

.indexItem {
  border-bottom: 1px solid rgba(0, 0, 0, 0);
  color: #666;
  font-family: 'Open Sans';
  font-size: 1.2em;
  margin: 0.5em;
  padding: 0.5em;
  transition: 0.5s;

  &:hover {
    border-bottom: 1px solid rgba(0, 0, 0, 1);
    color: #333;
    cursor: pointer;
    transform: scale(1.05);
  }

}

.activeIndexItem {
  @extend .indexItem;
  border-bottom: 1px solid rgba(0, 0, 0, 1);
  color: #333;
  transform: scale(1.05);
}

/* */

.slideshow {
  animation: contentUpIn 1s forwards;
  background: rgba(50, 50, 50, 1);
  overflow-x: scroll;
  padding: 2em 0;
  width: 100vw;
}

.slideshowHidden {
  @extend .slideshow;
  animation: contentUpOut 1s forwards;
}

.slideshowContent {
  display: inline-block;
  margin: 0 calc(50vw - 22em); // subtract half of image width and margin from half of view width
  padding: 0;
  white-space: nowrap;
}

.image {
  background: rgba(20, 20, 20, 0.5);
  border-radius: 2px;
  box-shadow: 3px 3px 3px rgba(20, 20, 20, 0.5);
  opacity: 0.5;
  margin: 4em;
  transition: 0.5s;
  transform: scale(1);

  img {
    display: block;
    width: 40em;
  }

  &:first-child {
    margin-left: 8em;
  }

  &:last-child {
    margin-right: 8em;
  }

  &:hover {
    cursor: pointer;
    opacity: 1;
  }

}

.activeImage {
  @extend .image;
  opacity: 1;
  transform: scale(1.1);
}

/* */

.projectContainer {
  align-items: center;
  display: flex;
  justify-content: center;
  min-height: 100vh;
  width: 100vw;
}

.project {
  width: 80vw;
}

.content {
  font-size: 1.2em;
  font-weight: 300;
  margin: 0 auto;
  max-width: 700px;
  padding: 0 10vw;
  padding-bottom: 2em;
}

.title {
  animation: contentDownIn 1s forwards;
  font-family: 'Oswald';
  font-size: 2.8em;
  font-weight: 300;
  margin: 0 auto;
  padding: 1em 0;
  text-align: center;
}

.titleHidden {
  @extend .title;
  animation: contentDownOut 1s forwards;
}

.projectImage {
  animation: contentLeftIn 1s forwards;
  background: rgba(100, 100, 100, 0.5);
  border-radius: 2px;
  box-shadow: 3px 3px 3px rgba(100, 100, 100, 0.5);
  width: 500px;
}

.projectImageHidden {
  @extend .projectImage;
  animation: contentLeftOut 1s forwards;
}

.text {
  animation: contentRightIn 1s forwards;
  padding: 2em 0;
}

.textHidden {
  @extend .text;
  animation: contentRightOut 1s forwards;
}

.tags {
  color: #333;
  font-size: 1.2em;
  font-style: italic;
  font-weight: 400;
  padding: 0.5em;
  text-align: left;
}

.summary {
  font-size: 1.1em;
  line-height: 1.5em;
  padding: 0.5em;
  text-align: left;
}

.links {
  animation: contentUpIn 1s forwards;
  text-align: center;
}

.linksHidden {
  @extend .links;
  animation: contentUpOut 1s forwards;
}

.link {
  font-size: 1.2em;
  font-weight: 400;
  padding: 2em;
  transition: 0.5s;

  &:hover {
    color: #666;
  }

}

/* */

.arrowContainer {
  align-items: center;
  display: flex;
  justify-content: center;
  height: 100%;
  padding: 0 2.5%;
  width: 10vw;
  z-index: 2;
}

.leftArrowContainer {
  @extend .arrowContainer;
  animation: contentRightIn 1s forwards;
  left: 0;
  top: 0;
}

.leftArrowContainerHidden {
  @extend .leftArrowContainer;
  animation: contentRightOut 1s forwards;
}

.rightArrowContainer {
  @extend .arrowContainer;
  animation: contentLeftIn 1s forwards;
  right: 0;
  top: 0;
}

.rightArrowContainerHidden {
  @extend .rightArrowContainer;
  animation: contentLeftOut 1s forwards;
}

.arrow {
  background: none;
  color: #666;
  font-family: 'Oswald';
  font-size: 8em;
  font-weight: 300;
  opacity: 0.8;
  outline: none;
  transition: 0.25s;

  &:hover {
    color: #333;
    cursor: pointer;
    opacity: 1;
    transform: scale(1.2);
  }

}

.leftArrow {
  @extend .arrow;
}

.rightArrow {
  @extend .arrow;
}

